Add user details update API
